--- a/car/templates/index.html
+++ b/car/templates/index.html
@@ -22,13 +22,15 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script type="text/javascript">
         function signal(v) {
-            $.getJSON('http://localhost:5002/'+v, function(data) {
-                document.get$('div#default h3').html(data['status']);});
+            $.getJSON('http://192.168.2.18:5002/'+v, function(data) {
+                h3 = document.getElementById('h3')
+                h3.innerText = data['status'];
+                });
         }
         </script>
 <body>
     <div id='default'>
-    <h3>Status</h3>
+    <h3 id='h3'>Status</h3>
 </div>
     <table>
         <tr>
@@ -54,6 +56,15 @@
             </td>
             <td>
                 <button class="button" onclick="signal(258)">Reverse</button>
+            </td>
+            <td>
+            </td>
+        </tr>
+        <tr>
+            <td>
+            </td>
+            <td>
+                <button class="button" onclick="signal(27)">Exit</button>
             </td>
             <td>
             </td>
