--- a/car/templates/index.html
+++ b/car/templates/index.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html>
 <html>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title></title>{{ title }}</title>
 <head>
     <style>
+    	html, body{
+        	height: 100%;
+        }
+    	.div {
+        	height: 100%;
+        }
+    	.table {
+    		height: 100%;
+        	width: 100%;
+    	}
+    	.tr {
+        	height: 25%;
+            width: 33.3%;
+        }
+        .td {
+        	height: 25%;
+            width: 33.3%; 
+        }
         .button {
             background-color: #4CAF50;
             border: none;
-            width: 150px;
+            width: 100%;
+            height: 100%;
             color: white;
-            height: 100px;
-            padding: 15px 32px;
             text-align: center;
             text-decoration: none;
             display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
             cursor: pointer;
         }
     </style>
@@ -29,47 +45,49 @@
         }
         </script>
 <body>
-    <div id='default'>
     <h3 id='h3'>Status</h3>
-</div>
-    <table>
-        <tr>
-            <td>
+<div class="div">
+    <table class="table">
+        <tr class="tr">
+            <td class="td">
             </td>
-            <td>
-                <button class="button" onclick="signal(259)">Drive</button>
+            <td class="td">
+                <a class="button" onclick="signal(259)">Drive</a>
             </td>
-        </tr>
-        <tr>
-            <td>
-                <button class="button" onclick="signal(260)">Left</button>
-            </td>
-            <td>
-                <button class="button" onclick="signal(32)">Brake</button>
-            </td>
-            <td>
-                <button class="button" onclick="signal(261)">Right</button>
+             <td class="td">
             </td>
         </tr>
-        <tr>
-            <td>
+        <tr class="tr">
+            <td class="td">
+                <a class="button" onclick="signal(260)">Left</a>
             </td>
-            <td>
-                <button class="button" onclick="signal(258)">Reverse</button>
+            <td class="td">
+                <a class="button" onclick="signal(32)">Brake</a>
             </td>
-            <td>
+            <td class="td">
+                <a class="button" onclick="signal(261)">Right</a>
             </td>
         </tr>
-        <tr>
-            <td>
+        <tr class="tr">
+            <td class="td">
             </td>
-            <td>
-                <button class="button" onclick="signal(27)">Exit</button>
+            <td class="td">
+                <a class="button" onclick="signal(258)">Reverse</a>
             </td>
-            <td>
+            <td class="td">
+            </td>
+        </tr>
+        <tr class="tr">
+            <td class="td">
+            </td>
+            <td class="td">
+                <a class="button" onclick="signal(27)">Exit</a>
+            </td>
+            <td class="td">
             </td>
         </tr>
     </table>
+</div>
 </body>
 
 </html>
