--- a/car/templates/beta.html
+++ b/car/templates/beta.html
@@ -88,7 +88,7 @@
         .divDown {
             height: 128px;
             width: auto;
-            background-color: red;
+            background-color: blue;
             z-index: 2;
         }
     </style>
