--- a/car/templates/index.html
+++ b/car/templates/index.html
@@ -1,93 +1,130 @@
 <!DOCTYPE html>
 <html>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title></title>{{ title }}</title>
+
 <head>
-    <style>
-    	html, body{
-        	height: 100%;
-        }
-    	.div {
-        	height: 100%;
-        }
-    	.table {
-    		height: 100%;
-        	width: 100%;
-    	}
-    	.tr {
-        	height: 25%;
-            width: 33.3%;
-        }
-        .td {
-        	height: 25%;
-            width: 33.3%; 
-        }
-        .button {
-            background-color: #4CAF50;
-            border: none;
-            width: 100%;
-            height: 100%;
-            color: white;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            cursor: pointer;
-        }
-    </style>
+  <style>
+    html,
+    body {
+      height: 100%;
+    }
+
+    .divContainer {
+      height: 100%;
+      width: 100%;
+      position: relative;
+    }
+
+    .divStatus,
+    .divVideo,
+    .divControls {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+
+    .divControls {
+      z-index: 10;
+    }
+
+    .divStatus {
+      z-index: 5;
+    }
+
+    .table {
+      height: 100%;
+      width: 100%;
+    }
+
+    .tr {
+      height: 25%;
+      width: 33.3%;
+    }
+
+    .td {
+      height: 25%;
+      width: 33.3%;
+    }
+
+    .button {
+      background-color: transparent;
+      border: 1px;
+      border-color: black;
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      vertical-align: center;
+      text-decoration-color: red;
+      text-decoration: none;
+      display: inline-block;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script type="text/javascript">
-        function signal(v) {
-            $.getJSON('http://{{ ip }}:5002/'+v, function(data) {
-                h3 = document.getElementById('h3')
-                h3.innerText = data['status'];
-                });
-        }
-        </script>
+  function signal(v) {
+    $.getJSON('http://{{ ip }}:5002/' + v, function (data) {
+      h3 = document.getElementById('h3')
+      h3.innerText = data['status'];
+    });
+  }
+</script>
+
 <body>
-    <h3 id='h3'>Status</h3>
-<div class="div">
-    <table class="table">
+  <div class="divContainer">
+    <div class="divStatus">
+      <h3 id='h3'>Status</h3>
+    </div>
+    <div class="divVideo">
+      <img style="width:100%; height: 100%;" src="{{ url_for('video_feed') }}">
+    </div>
+    <div class="divControls">
+      <table class="table">
         <tr class="tr">
-            <td class="td">
-            </td>
-            <td class="td">
-                <a class="button" onclick="signal(259)">Drive</a>
-            </td>
-             <td class="td">
-            </td>
+          <td class="td">
+          </td>
+          <td class="td">
+            <button class="button" onclick="signal(259)">Drive</button>
+          </td>
+          <td class="td">
+          </td>
         </tr>
         <tr class="tr">
-            <td class="td">
-                <a class="button" onclick="signal(260)">Left</a>
-            </td>
-            <td class="td">
-                <a class="button" onclick="signal(32)">Brake</a>
-            </td>
-            <td class="td">
-                <a class="button" onclick="signal(261)">Right</a>
-            </td>
+          <td class="td">
+            <button class="button" onclick="signal(260)">Left</button>
+          </td>
+          <td class="td">
+            <button class="button" onclick="signal(32)">Brake</button>
+          </td>
+          <td class="td">
+            <button class="button" onclick="signal(261)">Right</button>
+          </td>
         </tr>
         <tr class="tr">
-            <td class="td">
-            </td>
-            <td class="td">
-                <a class="button" onclick="signal(258)">Reverse</a>
-            </td>
-            <td class="td">
-            </td>
+          <td class="td">
+          </td>
+          <td class="td">
+            <button class="button" onclick="signal(258)">Reverse</button>
+          </td>
+          <td class="td">
+          </td>
         </tr>
         <tr class="tr">
-            <td class="td">
-            </td>
-            <td class="td">
-                <a class="button" onclick="signal(27)">Exit</a>
-            </td>
-            <td class="td">
-            </td>
+          <td class="td">
+          </td>
+          <td class="td">
+            <button class="button" onclick="signal(27)">Exit</button>
+          </td>
+          <td class="td">
+          </td>
         </tr>
-    </table>
-</div>
+      </table>
+    </div>
+  </div>
 </body>
 
 </html>
