Expand suuport for touch on firefox mobile.

--- a/car/templates/charlie.html
+++ b/car/templates/charlie.html
@@ -32,6 +32,11 @@
 </head>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script type="text/javascript">
+    function log(msg) {
+        var sts = document.getElementById('status');
+        sts.innerText = msg;
+    }
+
     function signal(v) {
         console.log('turning: ' + v);
         $.getJSON('http://{{ ip }}:5002/' + v, function (data) {
@@ -42,64 +47,102 @@
 
     function init() {
         canvas = document.getElementById('canvas');
-        canvas.addEventListener('mousedown', onmousedown, false);
-
-        canvas.addEventListener('mousemove', onmousemove, false);
-
-        canvas.addEventListener('mouseup', onmouseup, false);
+        //canvas.addEventListener('mousedown', onmousedown, false);
+        //canvas.addEventListener('mousemove', onmousemove, false);
+        //canvas.addEventListener('mouseup', onmouseup, false);
+        canvas.addEventListener('touchstart', ontouchstart, false);
+        canvas.addEventListener('touchmove', ontouchmove, false);
+        canvas.addEventListener('touchend', ontouchend, false);
     }
 
     var mouseDown = false;
-    var sensitivityX = 100;
-    var sensitivityY = 100;
+    var sensitivityX = 50;
+    var sensitivityY = 50;
     var signalX = -1;
     var signalY = -1;
 
-
-    function onmousedown(e) {
-        console.log('mouse down: ' + e.clientX + ' ' + e.clientY);
+    function down(x, y) {
+        console.log('mouse down: ' + x + ' ' + y);
         mouseDown = true;
-        signalX = e.clientX;
-        signalY = e.clientY;
+        signalX = x;
+        signalY = y;
+        signal(258);
     }
 
-    function onmouseup(e) {
-        console.log('mouse up: ' + e.clientX + ' ' + e.clientY);
+    function up() {
         signal(32);
         mouseDown = false;
         signalX = -1;
         signalY = -1;
     }
 
-    function onmousemove(e) {
-        console.log('mouse move: ' + e.clientX + ' ' + e.clientY);
+    function move(x, y) {
+        console.log('mouse move: ' + x + ' ' + y);
         if (mouseDown) {
-            if (e.clientX <= signalX - sensitivityX) {
-                signalX = e.clientX;
+            if (x <= signalX - sensitivityX) {
+                signalX = x;
                 signal(260);
                 //turn left
             }
-            else if (e.clientX >= signalX + sensitivityX) {
+            else if (x >= signalX + sensitivityX) {
                 //turn right
-                signalX = e.clientX;
+                signalX = x;
                 signal(261);
             }
-            else if (e.clientY <= signalY - sensitivityY) {
+            else if (y <= signalY - sensitivityY) {
                 //forward 
-                signalY = e.clientY;
+                signalY = y;
                 signal(258);
             }
-            else if (e.clientY >= signalY + sensitivityY) {
+            else if (y >= signalY + sensitivityY) {
                 //reverse 
-                signalY = e.clientY;
+                signalY = y;
                 signal(259);
             }
         }
+    }
+
+    function ontouchstart(e) {
+
+        var touches = e.changedTouches;
+        if (touches.length > 0) {
+
+            log('down: ' + touches[0].pageX + ' ' + touches[0].pageY);
+            down(touches[0].pageX, touches[0].pageY);
+        }
+    }
+
+    function ontouchend(e) {
+        log('up');
+        up();
+    }
+
+    function ontouchmove(e) {
+        var touches = e.changedTouches;
+        if (touches.length > 0) {
+
+            log('move: ' + touches[0].pageX + ' ' + touches[0].pageY);
+            move(touches[0].pageX, touches[0].pageY);
+        }
+    }
+
+
+    function onmousedown(e) {
+        down(e.clientX, e.clientY);
+    }
+
+    function onmouseup(e) {
+        up(e.clientX, e.clientY);
+    }
+
+    function onmousemove(e) {
+        move(e.clientX, e.clientY);
     }
 </script>
 
 <body onload='init()' class="body">
     <button class="button" onclick="signal(27)">Exit</button>
+    <label id='status'></label>
     <canvas class="canvas" id='canvas'></canvas>
 </body>
 
